# flutter_gameboy

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: input_mask.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: api.rs  apu.rs  cpu.rs  frb_generated.rs  gameboy.rs  joypad.rs  lib.rs  mmu.rs  ppu.rs  rom.rs  timer.rs
rust/src/instructions/: arithmetic.rs  control.rs  inc_dec.rs  jump.rs  ld.rs  misc.rs  mod.rs  rotate.rs  stack.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/: run_build_tool.cmd
rust_builder/cargokit/cmake/: cargokit.cmake
rust_builder/ios/: rust_lib_flutter_gameboy.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_gameboy.podspec
rust_builder/windows/: CMakeLists.txt
test/: input_mask_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
