[package]
name = "rust_lib_flutter_gameboy"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_lib_flutter_gameboy"
crate-type = ["cdylib", "staticlib"]

[dependencies]
crossbeam = "0.8.4"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
flutter_rust_bridge = "=2.12.0"
cpal = "0.17.3"
crossbeam-channel = "0.5.15"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(lazy_lock)'] }
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 3
